feat: 보았던 게시글 조회 API 설계